update app title

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     <!-- Material UI -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <title>React App</title>
+    <title>paperplane</title>
   </head>
   <body>
     <noscript>
